# Bowling

./: CMakeLists.txt
src/: Bowls.cpp  Bowls.hpp  Score.cpp  Score.hpp  main.cpp
tests/: CMakeLists.txt  ScoreTests.cpp
